text filters and expense form

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "budget",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://laurabeatris.github.io/2budget",
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "moment": "2.18.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-addons-shallow-compare": "15.6.0",
+    "react-dates": "12.7.0",
     "react-dom": "^16.8.6",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.1",
@@ -18,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
