--- a/package.json
+++ b/package.json
@@ -28,16 +28,11 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.5",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-15": "^1.4.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
+    "express": "^4.17.1",
     "gh-pages": "^2.0.1",
-    "jest-css-modules": "^2.1.0",
     "moment": "2.18.1",
     "node-sass": "^4.12.0",
+    "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "raf": "3.3.2",
     "react": "^16.8.6",
@@ -47,7 +42,6 @@
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-test-renderer": "16.0.0",
     "redux": "^4.0.3",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.2"
@@ -76,6 +70,13 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
+    "babel-jest": "^24.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-15": "^1.4.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest-css-modules": "^2.1.0",
+    "react-test-renderer": "16.0.0"
   }
 }
