--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "express": "^4.17.1",
+    "firebase": "^6.3.5",
     "gh-pages": "^2.0.1",
     "moment": "2.18.1",
     "node-sass": "^4.12.0",
