--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.3",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2",
-    "uuid": "^3.3.2"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
