enviroment variables to test

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -74,6 +74,7 @@
   "devDependencies": {
     "babel-jest": "^24.8.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "cross-env": "^5.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-15": "^1.4.0",
     "enzyme-adapter-react-16": "1.0.0",
