--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "firebase": "^6.3.5",
     "gh-pages": "^2.0.1",
