--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 # misc
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
+.env.development.
+.env.test
 .env.production.local
 
 npm-debug.log*
