--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ REACT_APP_FIREBASE_AUTH_DOMAIN=budget-296d3.firebaseapp.com
 REACT_APP_FIREBASE_URL=https://budget-296d3.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=budget-296d3
 REACT_APP_FIREBASE_STORAGE_BUCKET= 
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=316945241396,
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=316945241396
 REACT_APP_FIREBASE_APP_ID=1:316945241396:web:ae378532e8168e70
