firebase auth first setup

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,14 @@
 {
   "snapshotSerializers": ["enzyme-to-json/serializer"],
-  "setupFiles": ["raf/polyfill", "<rootDir>/src/tests/setupTests.js"]
+  "setupFiles": ["raf/polyfill", "<rootDir>/src/tests/setupTests.js"],
+  "moduleNameMapper": {
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/helpers/assetsTransformer.js",
+    "\\.(css|less)$": "<rootDir>/src/helpers/assetsTransformer.js"
+  },
+  "transform": {
+    "^.+\\.js$": "babel-jest",
+    "^.+\\.(css|scss|less)$": "jest-css-modules",
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/helpers/assetsTransformer.js",
+    "^.+\\.(js|jsx|mjs)$": "<rootDir>/helpers/assetsTransformer.js"
+  }
 }
