--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
