--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dates": "12.7.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.10.1",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
