--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-spinners": "^0.6.1",
     "redux": "^4.0.3",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
