--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,10 @@
 # misc
 .DS_Store
 .env.local
-.env.development.
+.env.development
 .env.test
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
